--- a/style.css
+++ b/style.css
@@ -1,22 +1,34 @@
 body{
     min-height: 100vh;
+    max-width: 100%;
+    overflow-x: hidden;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: 0;
     display:flex;
     flex-direction: column;
     align-items: center;
-    
+}
+
+button{
+    background-color:#3882F6;
+    color: #F9FAF8;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    margin: 4px 2px;
+    border-radius: 12px;
+    padding: 10px 20px;
 }
 
 header, footer, main{
     background-color: #1F2937;
     color: #F9FAF8;
     width: 100%;
+    padding: 16px;
 }
 
 header{
     display: flex;
-    padding: 16px;
     align-items: center;
     justify-content: space-between;
 }
@@ -24,19 +36,56 @@ header{
 .header-left{
     font-size: 24px;
     display: flex;
-    margin-left:10%;
+    margin-left:20%;
 }
 .header-right{
     font-size: 18px;
     color: #E5E7EB;
     display: flex;
     gap: 15px;
-    margin-right: 10%;
+    margin-right: 20%;
+}
+
+main{
+    display: flex;
+    align-items: stretch;
+    justify-content: space-between;
+}
+
+.hero{
+    display: flex; 
+    margin-left: 20%;
+    padding-bottom: 5%;
+    width: 400px;
+}
+
+.hero-text{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    flex-wrap: wrap-reverse;
+    gap: 15px;
+}
+
+.hero-main{
+    font-size: 48px;
+    font-weight: bolder;
+}
+
+.hero-secondary{
+    font-size: 18px;
+    color: #E5E7EB ;
+}
+
+.hero-img{
+    display: flex;
+    margin-right: 20%;
+    max-width: 100%;
+    height: auto;
 }
 
 footer{
     margin-top: auto;
-    padding: 20px;
     text-align: center;
 }
 
