--- a/style.css
+++ b/style.css
@@ -36,14 +36,14 @@ header{
 .header-left{
     font-size: 24px;
     display: flex;
-    margin-left:20%;
+    margin-left:25%;
 }
 .header-right{
     font-size: 18px;
     color: #E5E7EB;
     display: flex;
     gap: 15px;
-    margin-right: 20%;
+    margin-right: 25%;
 }
 
 main{
@@ -54,7 +54,7 @@ main{
 
 .hero{
     display: flex; 
-    margin-left: 20%;
+    margin-left: 25%;
     padding-bottom: 5%;
     width: 400px;
 }
@@ -79,11 +79,51 @@ main{
 
 .hero-img{
     display: flex;
-    margin-right: 20%;
+    margin-right: 25%;
+}
+
+.info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.images{
+    display: flex;
+    align-items: flex-start;
+}
+
+img{
     max-width: 100%;
     height: auto;
 }
 
+figure{
+    display: table;
+    margin: 15px;
+}
+
+figcaption{
+    display: table-caption;
+    caption-side: bottom;
+    text-align: left;
+    line-height: 1.3;
+}
+.card{
+    max-width: 100%;
+    border: 5px groove #3882F6;
+    border-radius: 12px;
+    float: left;
+    width:  200px;
+    height: 200px;
+    object-fit: cover;
+}
+
+.info-header{
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
 footer{
     margin-top: auto;
     text-align: center;
