--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@ body{
     align-items: center;
 }
 
+a{
+    font-weight: bold;
+    color:inherit;
+    font-style: italic;
+    text-decoration: underline;
+}
 button{
     background-color:#3882F6;
     color: #F9FAF8;
@@ -104,9 +110,12 @@ figure{
 }
 
 figcaption{
+    font-weight: 600    ;
+    font-size: 18px;
+    color: #444444;
     display: table-caption;
     caption-side: bottom;
-    text-align: left;
+    text-align: center  ;
     line-height: 1.3;
 }
 .card{
@@ -117,6 +126,32 @@ figcaption{
     width:  200px;
     height: 200px;
     object-fit: cover;
+}
+
+.quote{
+    font-size: 36px;
+    font-style: italic;
+
+    max-width: 100%;
+    background-color: #E5E7EB;
+    padding: 60px 30px;
+
+}
+
+.quote-1{
+    color: #1F2937;
+    margin-left: 25%;
+    margin-right: 25%;
+    text-align: left;
+}
+
+.cite-1{
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+    justify-content: flex-end;
+    text-align: right;
+    margin-right: 25%;
 }
 
 .info-header{
