--- a/style.css
+++ b/style.css
@@ -13,9 +13,12 @@ a{
     font-weight: bold;
     color:inherit;
     font-style: italic;
+    text-decoration: none;
+}
+.card-2{
     text-decoration: underline;
 }
-button{
+.main-button{
     background-color:#3882F6;
     color: #F9FAF8;
     border: none;
@@ -131,7 +134,6 @@ figcaption{
 .quote{
     font-size: 36px;
     font-style: italic;
-
     max-width: 100%;
     background-color: #E5E7EB;
     padding: 60px 30px;
@@ -154,6 +156,42 @@ figcaption{
     margin-right: 25%;
 }
 
+.signup-container{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 30px 30px;
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+.signup{
+    padding: 60px 80px;
+    width: 40%;
+    background-color:#3882F6 ;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 12px;
+}
+
+.signup-button{
+    border:3px solid #F9FAF8;
+    font-size: 18px;
+    font-weight: bold;
+    background-color:#3882F6;
+    color: #F9FAF8;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 12px;
+    padding: 10px 30px;
+}
+
+.signup-text{
+    margin: 0;
+    color: #F9FAF8;
+    font-size: 24px;
+    font-weight: bold;
+}
 .info-header{
     font-size: 36px;
     font-weight: bolder;
